--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -1,8 +1,22 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: rebeccapurple;
+}
+
 .containerCard {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  background-color: rebeccapurple;
   padding-top: 20px;
+}
+
+.containerPages {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 40px;
 }
