--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -20,3 +20,16 @@
   gap: 10px;
   height: 40px;
 }
+
+.containerSelect {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 40px;
+}
+
+.containerSelect p{
+  color: whitesmoke;
+  font-size: 20px;
+}
