--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -10,6 +10,7 @@
   justify-content: center;
   gap: 20px;
   padding-top: 20px;
+  max-width: 1850px;
 }
 
 .containerPages {
@@ -18,7 +19,7 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  height: 40px;
+  height: auto;
 }
 
 .containerSelect {
