--- a/src/components/content/card-details/CardDetails.module.css
+++ b/src/components/content/card-details/CardDetails.module.css
@@ -1,8 +1,28 @@
 .square {
-    position: fixed;
-    top: 50px;
-    right: 0;
-    height: 800px;
-    width: 600px;
-    background-color: cornflowerblue;
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 400px;
+  background-color: cadetblue;
+}
+
+.windowClose {
+  position: fixed;
+  top: 40px;
+  right: 40px;
+  height: 40px;
+  width: 40px;
+}
+
+.cover {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
