--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -11,6 +11,7 @@
   gap: 20px;
   padding-top: 20px;
   max-width: 1850px;
+  margin: auto;
 }
 
 .containerPages {
@@ -20,6 +21,8 @@
   align-items: center;
   gap: 10px;
   height: auto;
+  max-width: 1440px;
+  margin: auto;
 }
 
 .containerSelect {
